# numerical-methods-in-differential-equations

./: README.md  pyproject.toml
docs/: Rev.tex  doc.tex
docs/latex/: doc.tex
src/: backwards_difference.py  edp01.py  edp_02.py  main.py
