[tool.poetry]
name = "numerical-methods-in-differential-equations"
version = "0.1.0"
description = ""
authors = ["elias-maciel <eliasfsilvamaciel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
